# sdk-rust

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/: client.rs  consumer.rs  lib.rs  ssrf.rs  types.rs
src/middleware/: actix.rs  axum.rs  mod.rs  rocket.rs
tests/: client_test.rs  ssrf_test.rs
