[package]
name = "peekapi"
version = "0.1.0"
edition = "2021"
description = "API analytics SDK — buffers request events and flushes them to an ingestion endpoint"
license = "MIT"
repository = "https://github.com/peekapi-dev/sdk-rust"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
sha2 = "0.10"

# Feature-gated framework dependencies
actix-web = { version = "4", optional = true }
actix-service = { version = "2", optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-layer = { version = "0.3", optional = true }
http = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }
rocket = { version = "0.5", optional = true }

[features]
default = []
actix = ["dep:actix-web", "dep:actix-service"]
axum-middleware = ["dep:axum", "dep:tower", "dep:tower-layer", "dep:http", "dep:pin-project-lite"]
rocket-fairing = ["dep:rocket"]

[dev-dependencies]
tempfile = "3"
